--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
                             <span class="link-title">Medal</span>
                         </div>
                     </a>
+                    <a href="https://github.com/Exanime02" class="link-card" target="_blank">
+                        <img src="images\github.png" alt="GitHub" class="link-icon">
+                        <div class="link-text">
+                            <span class="link-title">GitHub</span>
+                        </div>
+                    </a>
                 </div>
             </section>
 
@@ -315,4 +321,5 @@ document.addEventListener('DOMContentLoaded', function() {
     });
 });
 </script>
+
 </body></html>
